--- a/. Aplication Tracking.md
+++ b/. Aplication Tracking.md
@@ -1,4 +1,8 @@
-- fail2ban
-- NGINGX
-- Blockchain explorer
+# ToDo- and Progressliste
+
+- [ ] rbbs Linux installieren
+- [ ] fail2ban
+- [ ] NGINGX
+- [ ] Tor wird nicht installiert, da kein public Access (LN-Peer) Vorgesehen ist. Remote-Acces erfolgt via Tailscale-VPN
+- [ ] Blockchain explorer
 
